new-flask-app/app-flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: eks-sample-app
spec:
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: sheetal0408/docker-image-flask-eks 
        ports:
        - containerPort: 5000
---


# apiVersion: v1
# kind: Service
# metadata:
#   name: flask-service
#   namespace: eks-sample-app
# spec:
#   selector:
#     app: flask-app
#   type: LoadBalancer
#   ports:
#   - port: 5000
#     targetPort: 5000
#     nodePort: 30002


apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: eks-sample-app
spec:
  selector:
    app: flask-app
  ports:
  - port: 80
    targetPort: 5000
